--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </style>
     </head>
     <body>
+        <h1> welcome </h1>
        <div id="grid">
         <div class="grid-item">1</div>
         <div class="grid-item">2</div>
